# redwall

./: .gitignore  README.md  pyproject.toml  testscript.py
redwall/: edit.html  initialize_redwall.sql  main.py  redwall.py  routing.py  template.py  todo.md
redwall/static/: main.js
redwall/templates/: create_note.html  edit_note.html  list_notes.html
tests/: test_redwall.py
