[tool.poetry]
name = "redwall"
version = "0.1.0"
description = ""
authors = ["Vincent R. Siu <vincesiu@fb.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gunicorn = "^20.0.4"
pypandoc = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
